# oneAPI-samples

DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/productive_libraries/blas/dot/: CMakeLists.txt  README.md  api.hpp  demo.cpp  dot.cpp  hardware_demo.cpp  test.cpp
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/productive_libraries/blas/dot/include/: interface.hpp  parameters.h
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/productive_libraries/blas/gemm/: CMakeLists.txt  README.md  api.cpp  api.hpp  demo.cpp  gemm.cpp  hardware_demo.cpp  test.cpp
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/productive_libraries/blas/gemm/10x8-1024ResultsPerPE/XYZInitHoisted-fpgaregReduced-ProductChannelNoFpgareg/: .project  sgemm.sycl.h
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/productive_libraries/blas/gemm/10x8-1024ResultsPerPE/XYZInitHoisted-fpgaregReduced-ProductChannelNoFpgareg-VarScoped/: synthesize.sh
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/productive_libraries/blas/gemm/10x8-1024ResultsPerPE/basic-version-II32-JJ32-KK32-III10-JJJ8-KKK16/: complex_helper.hpp  kernel-Product.txt  sgemm.sycl.h
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/productive_libraries/blas/gemm/10x8-1024ResultsPerPE/signal-generator/: convert-to-unsigned.sh  parameters.h  sgemm.sycl.h  synthesize.sh
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/productive_libraries/blas/gemm/10x8/II32-JJ32-KK32-III10-JJJ8-KKK16-XYZInitHoisted-fpgaregReduced-ProductChannelNoFpgareg/: compile-early-image.sh
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/productive_libraries/blas/gemm/10x8/XYZInitHoisted-fpgaregReduced-ProductChannelNoFpgareg-VarScoped/: compile-early-image.sh  hardware_demo.cpp  sgemm.sycl.h  synthesize.sh
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/productive_libraries/blas/gemm/10x8/basic-version-II32-JJ32-KK32-III10-JJJ8-KKK16/: synthesize-gemm-fpga-repro-oneapi.sh
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/productive_libraries/blas/gemm/3x3-1ResultPerPE/XYZInitHoisted-fpgaregReduced-ProductChannelNoFpgareg/: compile-early-image.sh
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/productive_libraries/blas/gemm/3x3-1ResultPerPE/XYZInitHoisted-fpgaregReduced-ProductChannelNoFpgareg-VarScoped/: sgemm.sycl.h
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/productive_libraries/blas/gemm/3x3/XYZInitHoisted-fpgaregReduced-ProductChannelNoFpgareg/: synthesize.sh
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/productive_libraries/blas/gemm/3x3/XYZInitHoisted-fpgaregReduced-ProductChannelNoFpgareg-VarScoped/: sgemm.sycl.h  synthesize.sh
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/productive_libraries/blas/gemm/4x4-16ResultsPerPE/signal-generator/: acl_quartus_report.txt  hardware_demo.cpp  interface.hpp  sgemm.sycl.h  synthesize.sh  test.cpp
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/productive_libraries/blas/gemm/8x8-1024ResultsPerPE/XYZInitHoisted-fpgaregReduced-ProductChannelNoFpgareg-VarScoped/: compile-early-image.sh  synthesize.sh
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/productive_libraries/blas/gemm/8x8-1024ResultsPerPE/signal-generator/: parameters.h  sgemm.sycl.h  synthesize.sh
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/productive_libraries/blas/gemm/8x8-1ResultPerPE/XYZInitHoisted-fpgaregReduced-ProductChannelNoFpgareg/: .cproject
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/productive_libraries/blas/gemm/8x8-1ResultPerPE/XYZInitHoisted-fpgaregReduced-ProductChannelNoFpgareg-Ntuple-Unroll/: compile-early-image.sh
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/productive_libraries/blas/gemm/II1-JJ1-KK1-III3-JJJ3-KKK1/: run.sh  sgemm.sycl.h
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/productive_libraries/blas/gemm/II1-JJ1-KK1-III3-JJJ3-KKK1-XYZInitHoisted-fpgaregReduced-ProductChannelNoFpgareg/: pipe_wrapper.hpp  run.sh  sgemm.sycl.h
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/productive_libraries/blas/gemm/II1-JJ1-KK1-III8-JJJ8-KKK1/: run.sh
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/productive_libraries/blas/gemm/II1-JJ1-KK1-III8-JJJ8-KKK1-XYZInitHoisted-fpgaregReduced/: .cproject  run.sh  synthesize.sh
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/productive_libraries/blas/gemm/II1-JJ1-KK1-III8-JJJ8-KKK1-XYZInitHoisted-fpgaregReduced-ProductChannelNoFpgareg/: .project  synthesize.sh
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/productive_libraries/blas/gemm/II1-JJ1-KK1-III8-JJJ8-KKK1-XYZInitHoisted-fpgaregReduced-ProductChannelNoFpgareg-FeederChannelArrayFloat8/: synthesize.sh
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/productive_libraries/blas/gemm/II1-JJ1-KK1-III8-JJJ8-KKK1-XYZInitHoisted-fpgaregReduced-ProductChannelNoFpgareg-Ntuple-Unroll/: synthesize.sh
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/productive_libraries/blas/gemm/II1-JJ1-KK1-III8-JJJ8-KKK1-XYZInitHoisted-fpgaregReduced-ProductChannelNoFpgareg-NtuplePipeA/: synthesize.sh
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/productive_libraries/blas/gemm/II32-JJ32-KK32-III10-JJJ8-KKK16/: sgemm.sycl.h
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/productive_libraries/blas/gemm/II32-JJ32-KK32-III10-JJJ8-KKK16-XYZInitHoisted-fpgaregReduced-ProductChannelNoFpgareg/: .cproject  sgemm.sycl.h
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/productive_libraries/blas/gemm/II8-JJ8-KK8-III8-JJJ8-KKK8/: gemm_fpga  kernel-product.txt  run.sh  sgemm.sycl.h
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/productive_libraries/blas/gemm/include/: 881-sgemm.scycl.h  interface.hpp  parameters.h
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/productive_libraries/blas/gemm/issue/: make-gemm-fpga.sh.e2276642  make-gemm-fpga.sh.o2276642
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/productive_libraries/blas/gemm/src/: gemm-interface.cpp
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/productive_libraries/lapack/qrd/: CMakeLists.txt  qrd-run-fpga.cpp  qrd.cpp
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/productive_libraries/lapack/qrd/src/: CMakeLists.txt  qrd-spec.cpp
(+374 files in other folders)
